--- a/styles/pages/home/_hero.scss
+++ b/styles/pages/home/_hero.scss
@@ -34,7 +34,7 @@
 
         & > p { 
             margin: 1.5rem 0;
-
+            font-weight: 500;
             font-size: 2.5rem;
 
             @include respond(tab){
@@ -49,12 +49,12 @@
         & > a {
             display: inline-block;
             font-size: 2.25rem;
-            border: solid 3px $c-orange-m;
+            border: solid 2px $c-orange-m;
             box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
             color: $c-black;
             background-color: $c-white;
             padding: 1.25rem 1.75rem;
-            border-radius: 20px;
+            border-radius: 1rem;
             transition: all 300ms;
             font-weight: 500;
 
@@ -98,7 +98,7 @@
             height: 175px;
             width: 34rem;
             background-color: white;
-            border-radius: 2rem;
+            border-radius: 1rem;
             overflow:hidden;
 
             top: 10rem;
@@ -192,6 +192,12 @@
 
             bottom: -10rem;
             left: 2rem;
+
+            @include respond(mobile) {
+                
+                width: 270px;
+                bottom: -15rem;
+            }
 
             & > div {
                 padding: 2rem;
