some animations in home page

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,10 @@
+
 @import "./global/variables";
 @import "./global/global";
 @import "./global/mixins";
 @import "./global/margins";
 @import "./global/fonts";
+@import "./global/animations";
 //Specials
 @import "./components/points";
 //Components
