--- a/styles/components/_navbar-desktop.scss
+++ b/styles/components/_navbar-desktop.scss
@@ -28,8 +28,9 @@
 
         & > ul > a {
             transition: all 300ms;
-            margin-left: 1rem;
+            margin-left: 2rem;
             font-size: 1.5rem;
+            font-weight: 500;
             &:hover{ color:$c-orange-m; }
         }
     }
@@ -38,9 +39,15 @@
 
     &__cta {
         font-size: 1.75rem;
+        //font-weight: 500;
         color: $c-white;
         background-color: $c-orange-m;
         padding: 1rem 1.5rem;
-        border-radius: 20px;
+        border-radius: 10px;
+        transition: background-color 300ms;
+        text-transform: capitalize;
+        &:hover {
+            background-color:$c-orange-l;
+        }
     }
 }
