--- a/styles/pages/home/_blog-posts.scss
+++ b/styles/pages/home/_blog-posts.scss
@@ -3,6 +3,16 @@
     display: grid;
     grid-template-columns: 1fr;
     overflow-x: hidden;
+    justify-items: center;
+    & > h6,h2 {
+        text-align: center;
+        z-index: 10;
+    }
+    h2 {
+        max-width: 60%;
+        
+        @include respond(desktop-small) {max-width: 100%;}
+    }
 
     &__grid {
         display: grid;
@@ -36,7 +46,7 @@
                 & > h3 {
                     font-size: 1.75rem;
                     grid-column: 1/3;
-                
+                    font-weight: 500;
                 }
 
                 & > a {
