--- a/styles/pages/home/_hero.scss
+++ b/styles/pages/home/_hero.scss
@@ -34,8 +34,11 @@
 
         & > p { 
             margin: 1.5rem 0;
-            font-weight: 500;
             font-size: 2.5rem;
+            max-width: 90%;
+            @include respond(desktop-small){
+                max-width: 100%;
+            }
 
             @include respond(tab){
                 font-size: 2.25rem;
@@ -46,30 +49,45 @@
             } 
         }
 
-        & > a {
-            display: inline-block;
-            font-size: 2.25rem;
-            border: solid 2px $c-orange-m;
-            box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-            color: $c-black;
+        & > .home-hs_cta {
+            align-items: center;
             background-color: $c-white;
-            padding: 1.25rem 1.75rem;
+            border: solid 2px $c-orange-m;
             border-radius: 1rem;
+            box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+            cursor: pointer;
+            display: inline-flex;
+            padding: .75rem 1rem;
             transition: all 300ms;
-            font-weight: 500;
 
-            @include respond(tab) {
+            & > svg,a {transition: all 300ms;}
+
+            & > svg {
+                fill: $c-black;
+            }
+            & > a {
+                font-weight: 500;
                 font-size: 2rem;
+                color: $c-black;
+                @include respond(tab) {
+                    font-size: 1.75rem;
+                }
+                // @include respond(phone-tab){
+                //     font-size: 1.5rem;
+                   
+                // }
             }
 
+
             @include respond(phone-tab){
-                font-size: 1.75rem;
                 padding: 1rem 1.5rem;
             }
 
             &:hover {
-                color: $c-white;
-                background-color: $c-orange-m;
+                background-color: $c-orange-l;
+                border-color: $c-orange-l;
+                & > a {color: $c-white;}
+                & > svg { fill: $c-white;}
             }
         }
         
