--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,8 @@
 @import "./global/margins";
 @import "./global/fonts";
 @import "./global/animations";
+//Sections
+@import "./sections/grid-blocks";
 //Specials
 @import "./components/points";
 //Components
