--- a/styles/pages/home/_hero.scss
+++ b/styles/pages/home/_hero.scss
@@ -63,7 +63,10 @@
             & > svg,a {transition: all 300ms;}
 
             & > svg {
+                height: 15px;
+                width: 15px;
                 fill: $c-black;
+                margin-left: 3px;
             }
             & > a {
                 font-weight: 500;
@@ -76,6 +79,8 @@
                 //     font-size: 1.5rem;
                    
                 // }
+                
+                
             }
 
 
@@ -87,7 +92,13 @@
                 background-color: $c-orange-l;
                 border-color: $c-orange-l;
                 & > a {color: $c-white;}
-                & > svg { fill: $c-white;}
+                & > svg { 
+                    fill: $c-white;
+                    transform: translateX(5px);
+                }
+
+
+                
             }
         }
         
@@ -187,7 +198,8 @@
         @include respond(desktop-small) {
             display: block;
             position: relative;
-            margin-bottom:30rem;
+            margin-bottom:20rem;
+            margin-top: 10rem;
         }
         
         
@@ -231,6 +243,7 @@
                 }
                 & > h6 {
                     font-size: 2rem;
+                    font-weight: 500;
                     grid-column: 2/3;
                 }
 
