--- a/styles/pages/home/_hero.scss
+++ b/styles/pages/home/_hero.scss
@@ -201,6 +201,10 @@
             margin-bottom:20rem;
             margin-top: 10rem;
         }
+
+        @include respond(phone-tab) {
+            margin-top: 2rem;
+        }
         
         
         &-laptop {
