I created a component for all the services in his hero section

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,6 +7,8 @@
 @import "./global/animations";
 //Sections
 @import "./sections/grid-blocks";
+@import "./sections/services-sections";
+@import "./sections/services-cta";
 //Specials
 @import "./components/points";
 //Components
