--- a/styles/sections/_services-sections.scss
+++ b/styles/sections/_services-sections.scss
@@ -6,15 +6,10 @@
     align-content: center;
     column-gap: 4rem;
     row-gap: 2rem;
-
+    padding-top: 16rem;
     @include respond(tab) {
         grid-template-columns: 1fr;
     } 
-
-    & > h1 {
-        margin-top: 8rem;
-        
-    }
 
     & > h2 {
         grid-column: 1/2;
@@ -31,7 +26,7 @@
             grid-column: 1/2;
             grid-row: 3/4;
         } 
-        
+
     }
 }
 
@@ -39,6 +34,10 @@
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
+
+    & > h2,h6 {
+        text-align: center;
+    }
 
     & > h2 {
         margin-bottom: 2rem;
@@ -59,11 +58,14 @@
     display: grid;
     grid-template-columns: min-content 1fr;
     gap: 8rem;
+    
+    align-items: center;
+    
     @include respond(tab) { grid-template-columns: 1fr;}
 
     & > img {
-        max-height: 700px;
-
+        max-height:700px;
+        padding:2rem;
         @include respond(desktop){ max-height: 650px;}
         @include respond(desktop-small){ max-height: 600px;}
         @include respond(tab-big){ max-height: 550px;}
@@ -72,13 +74,9 @@
             max-height: 100%;
             height: auto;
             width: 100%;
+            padding:0rem;
         }
     }
-
-    &__img-left { 
-        
-        width:auto;
-    };
     
 
     &__content {
@@ -87,6 +85,7 @@
             display: grid;
             grid-template-columns: 1fr 1fr;
             justify-items: start;
+            margin-bottom: 4rem;
             @include respond(desktop-big) {
                 grid-template-columns: 1fr;
                 row-gap: 1.5rem;
@@ -96,11 +95,30 @@
         }
 
         &-title {
-
+            margin-bottom: 2.5rem;
         }
 
+        &-box {
+            margin-bottom: 2.5rem;
+            & > h3 { 
+                font-size: 3rem;
+                font-weight: 500;
+                margin-bottom: 1rem;
+                @include respond(tab) {
+                    font-size: 2.5rem;
+                }
+            }
+
+            & > p {
+                font-size: 2.25rem;
+                @include respond(tab) {
+                    font-size: 2rem;
+                }
+            }
+        }
         &-paragraph {
-            margin-bottom: 1rem;
+            
+            
         }
     }
 }
