Marketing page ready, i need to fix the navigation languages

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -28,4 +28,7 @@
 //Websites
 @import "./pages/websites/web-types-section";
 
+//Marketing
+@import "./pages/marketing/marketing-sections";
+
 @import "./components/navbar-desktop.scss";
