contact page created

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -30,5 +30,6 @@
 
 //Marketing
 @import "./pages/marketing/marketing-sections";
+@import "./pages/contact";
 
 @import "./components/navbar-desktop.scss";
