--- a/styles/global/_variables.scss
+++ b/styles/global/_variables.scss
@@ -1,4 +1,5 @@
-$c-black:#1A1A1A;
+//$c-black:#1A1A1A;
+$c-black:#000;
 $c-white: #fff;
 $c-orange-m: #F84525;
 $c-orange-l: #F95639;
@@ -6,4 +7,3 @@ $c-gray-l: #F5F5F5;
 $c-gray-m: #ECECEC;
 $c-gray-d:#C4C4C4;
         
-
