--- a/styles/pages/home/_hero.scss
+++ b/styles/pages/home/_hero.scss
@@ -17,6 +17,7 @@
         
         & > h1 {
             font-size: 6.5rem;
+            margin-top: 12rem;
             @include respond(desktop-small){
                 margin-top: 8rem;
 
