--- a/styles/sections/_services-cta.scss
+++ b/styles/sections/_services-cta.scss
@@ -1,7 +1,7 @@
 .service_cta {
     align-items: center;
     border: solid 2px;
-    border-radius: 1rem;
+    border-radius: .2rem;
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
     cursor: pointer;
     display: inline-flex;
