--- a/styles/components/_navbar-desktop.scss
+++ b/styles/components/_navbar-desktop.scss
@@ -43,7 +43,7 @@
         color: $c-white;
         background-color: $c-orange-m;
         padding: 1rem 1.5rem;
-        border-radius: 10px;
+        border-radius: .2rem;
         transition: background-color 300ms;
         text-transform: capitalize;
         &:hover {
