--- a/styles/pages/home/_blog-posts.scss
+++ b/styles/pages/home/_blog-posts.scss
@@ -30,10 +30,17 @@
         }
 
         &--item{
+            
             transition: all 300ms;
-            & > img { width: 100%; }
+            
+            & > img {
+                border-top-left-radius: .2rem;
+                border-top-right-radius: .2rem;
+                width: 100%; }
 
             & > .home-bs__grid--content {
+                border-bottom-left-radius: .2rem;
+                border-bottom-right-radius: .2rem;
                 display: grid;
                 grid-template-columns: 1fr max-content;
                 padding: 2rem;
