--- a/styles/pages/home/_methods.scss
+++ b/styles/pages/home/_methods.scss
@@ -38,7 +38,7 @@
                 row-gap: 2rem;
                 box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
                 padding: 6rem 4rem;
-                border-radius: 2rem;
+                border-radius: .2rem;
                 z-index: 5;
                 
                 @include respond(tab) {
