--- a/styles/sections/_grid-blocks.scss
+++ b/styles/sections/_grid-blocks.scss
@@ -48,6 +48,7 @@
             font-size: 1.8rem;
             @include respond(tab-big) {
                 font-size: 1.7rem;
+                grid-column: 1/3;
             }
         
             @include respond(phone-tab){
